Fixed styling for talks on mobiles

--- a/_sass/_talkers.scss
+++ b/_sass/_talkers.scss
@@ -16,6 +16,9 @@
 	&:hover {
 		background-color: $grey-color-light;
 	}
+	h2 {
+		margin-bottom: 5px;
+	};
 }
 
 .talker-name {
@@ -25,5 +28,4 @@
 	};
 	color: $text-color;
 	background-color: rgba(255, 255, 255, 0.8);
-	width: 11em;
 }
